--- a/dev/sass/_bswe.scss
+++ b/dev/sass/_bswe.scss
@@ -328,6 +328,11 @@ body {
         }
     }
 
+    .mobile-ad {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
     #nav-bar {
         min-height: inherit;
 
