added JS processing to Gruntfile and started working on JS to distribute ads in mobile

--- a/dev/sass/_bswe.scss
+++ b/dev/sass/_bswe.scss
@@ -329,8 +329,13 @@ body {
     }
 
     .mobile-ad {
+        display: none;
         text-align: center;
         margin-bottom: 10px;
+
+        @media screen and (max-width: $smallest) {
+            display: block;
+        }
     }
 
     #nav-bar {
