--- a/dev/sass/_bswe.scss
+++ b/dev/sass/_bswe.scss
@@ -447,6 +447,10 @@ body {
             margin-top: 0;
             font-family: $main-font;
         }
+
+        h4 {
+            margin: 0;
+        }
     }
 
     .yarpp-related {
