--- a/css/bswe.css
+++ b/css/bswe.css
@@ -44,92 +44,111 @@ body #sidebar-alt {
 body #content {
   background: #fff;
 }
-/* line 115, ../../sass/_bswe.scss */
+/* line 113, ../../sass/_bswe.scss */
+body #execphp-10 {
+  background: #e2e2e2;
+}
+/* line 116, ../../sass/_bswe.scss */
+body #execphp-10 .banner728 {
+  margin: 0;
+  max-height: 90px;
+  text-align: center;
+  padding: 10px;
+}
+/* line 125, ../../sass/_bswe.scss */
+body footer .col3-1 {
+  height: 75px;
+}
+/* line 129, ../../sass/_bswe.scss */
+body footer .col3-1 #social-widget-3 h4 {
+  text-align: right;
+}
+/* line 138, ../../sass/_bswe.scss */
 body #header-slider.slider img {
   border: 1px solid #ccc;
 }
-/* line 120, ../../sass/_bswe.scss */
+/* line 143, ../../sass/_bswe.scss */
 body #header-slider.slider .slide-post-title a {
   font-family: Cabin, Arial, sans-serif;
   font-size: 14px;
 }
-/* line 130, ../../sass/_bswe.scss */
+/* line 153, ../../sass/_bswe.scss */
 body #headerwrap {
   background: #000;
 }
-/* line 133, ../../sass/_bswe.scss */
+/* line 156, ../../sass/_bswe.scss */
 body #headerwrap #header {
   background-image: url("/wp-content/themes/responz/images/bswe-sax.png");
   background-repeat: no-repeat;
   height: 172px;
 }
 @media screen and (min-width: 520px) {
-  /* line 133, ../../sass/_bswe.scss */
+  /* line 156, ../../sass/_bswe.scss */
   body #headerwrap #header {
     border-bottom: none;
   }
 }
-/* line 144, ../../sass/_bswe.scss */
+/* line 167, ../../sass/_bswe.scss */
 body #headerwrap #header hgroup {
   padding-left: 66px;
 }
 @media screen and (max-width: 480px) {
-  /* line 148, ../../sass/_bswe.scss */
+  /* line 171, ../../sass/_bswe.scss */
   body #headerwrap #header #searchform-wrap {
     position: relative;
   }
 }
-/* line 154, ../../sass/_bswe.scss */
+/* line 177, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo,
 body #headerwrap #header #site-description {
   width: 300px;
 }
 @media screen and (max-width: 600px) {
-  /* line 154, ../../sass/_bswe.scss */
+  /* line 177, ../../sass/_bswe.scss */
   body #headerwrap #header #site-logo,
   body #headerwrap #header #site-description {
     width: 220px;
   }
 }
-/* line 164, ../../sass/_bswe.scss */
+/* line 187, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo {
   padding-top: 0;
   top: 0;
 }
-/* line 168, ../../sass/_bswe.scss */
+/* line 191, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo a {
   color: #9CCFEE;
   font-family: SkinBones, sans-serif, Arial, Helvetica;
   font-size: 44px;
   font-style: normal;
 }
-/* line 176, ../../sass/_bswe.scss */
+/* line 199, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo a span {
   display: block;
   line-height: 1em;
 }
 @media screen and (max-width: 600px) {
-  /* line 168, ../../sass/_bswe.scss */
+  /* line 191, ../../sass/_bswe.scss */
   body #headerwrap #header #site-logo a {
     font-size: 38px;
   }
 }
-/* line 187, ../../sass/_bswe.scss */
+/* line 210, ../../sass/_bswe.scss */
 body #headerwrap #header #site-description {
   color: #fff;
   top: 94px;
 }
-/* line 194, ../../sass/_bswe.scss */
+/* line 217, ../../sass/_bswe.scss */
 body #headerwrap #header .social-widget .rss a {
   color: #fff;
 }
 @media screen and (min-width: 760px) and (max-width: 850px) {
-  /* line 201, ../../sass/_bswe.scss */
+  /* line 224, ../../sass/_bswe.scss */
   body #headerwrap #header #text-13 img {
     max-width: 400px;
   }
 }
-/* line 209, ../../sass/_bswe.scss */
+/* line 232, ../../sass/_bswe.scss */
 body #headerwrap #text-16 {
   color: #fff;
   font-style: italic;
@@ -137,51 +156,51 @@ body #headerwrap #text-16 {
   max-width: 970px;
   padding: 10px 3% 0;
 }
-/* line 216, ../../sass/_bswe.scss */
+/* line 239, ../../sass/_bswe.scss */
 body #headerwrap #text-16 a {
   color: #fff;
 }
-/* line 221, ../../sass/_bswe.scss */
+/* line 244, ../../sass/_bswe.scss */
 body #headerwrap #main-nav {
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 224, ../../sass/_bswe.scss */
+/* line 247, ../../sass/_bswe.scss */
 body #headerwrap #main-nav a {
   color: #fff;
   min-height: 20px;
 }
 @media screen and (max-width: 480px) {
-  /* line 224, ../../sass/_bswe.scss */
+  /* line 247, ../../sass/_bswe.scss */
   body #headerwrap #main-nav a {
     color: #333;
   }
 }
 @media screen and (max-width: 520px) {
-  /* line 224, ../../sass/_bswe.scss */
+  /* line 247, ../../sass/_bswe.scss */
   body #headerwrap #main-nav a {
     font-size: 13px;
   }
 }
-/* line 239, ../../sass/_bswe.scss */
+/* line 262, ../../sass/_bswe.scss */
 body #headerwrap #main-nav .current_page_item a {
   color: #fff;
 }
-/* line 245, ../../sass/_bswe.scss */
+/* line 268, ../../sass/_bswe.scss */
 body #headerwrap #top-nav {
   float: right;
   padding: 0;
 }
-/* line 250, ../../sass/_bswe.scss */
+/* line 273, ../../sass/_bswe.scss */
 body #headerwrap #top-nav li:last-child {
   margin-right: 0;
 }
 @media screen and (max-width: 760px) {
-  /* line 257, ../../sass/_bswe.scss */
+  /* line 280, ../../sass/_bswe.scss */
   body .hide-mobile {
     display: none;
   }
 }
-/* line 263, ../../sass/_bswe.scss */
+/* line 286, ../../sass/_bswe.scss */
 body .homepage-signup,
 body .sidebar_newsletter,
 body .article-bottom-signup {
@@ -191,13 +210,13 @@ body .article-bottom-signup {
   text-align: left;
   margin-bottom: 15px;
 }
-/* line 272, ../../sass/_bswe.scss */
+/* line 295, ../../sass/_bswe.scss */
 body .homepage-signup em,
 body .sidebar_newsletter em,
 body .article-bottom-signup em {
   color: #333;
 }
-/* line 276, ../../sass/_bswe.scss */
+/* line 299, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .homepage-signup h4,
 body .sidebar_newsletter h3,
@@ -208,7 +227,7 @@ body .article-bottom-signup h4 {
   font-style: normal;
   margin: 0 0 15px;
 }
-/* line 285, ../../sass/_bswe.scss */
+/* line 308, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .sidebar_newsletter h3,
 body .article-bottom-signup h3 {
@@ -219,13 +238,13 @@ body .article-bottom-signup h3 {
   padding: 10px;
   line-height: 1.2em;
 }
-/* line 295, ../../sass/_bswe.scss */
+/* line 318, ../../sass/_bswe.scss */
 body .homepage-signup h3 em,
 body .sidebar_newsletter h3 em,
 body .article-bottom-signup h3 em {
   color: #fff;
 }
-/* line 300, ../../sass/_bswe.scss */
+/* line 323, ../../sass/_bswe.scss */
 body .homepage-signup h4,
 body .sidebar_newsletter h4,
 body .article-bottom-signup h4 {
@@ -233,7 +252,7 @@ body .article-bottom-signup h4 {
   padding: 5px;
   border: 1px solid #000;
 }
-/* line 306, ../../sass/_bswe.scss */
+/* line 329, ../../sass/_bswe.scss */
 body .homepage-signup input[type=text],
 body .sidebar_newsletter input[type=text],
 body .article-bottom-signup input[type=text] {
@@ -242,7 +261,7 @@ body .article-bottom-signup input[type=text] {
   padding: 5px;
   margin: 0 0 10px;
 }
-/* line 313, ../../sass/_bswe.scss */
+/* line 336, ../../sass/_bswe.scss */
 body .homepage-signup input[type=submit],
 body .sidebar_newsletter input[type=submit],
 body .article-bottom-signup input[type=submit] {
@@ -250,139 +269,143 @@ body .article-bottom-signup input[type=submit] {
   background-color: #2b7534;
 }
 @media screen and (min-width: 760px) {
-  /* line 319, ../../sass/_bswe.scss */
+  /* line 342, ../../sass/_bswe.scss */
   body .img-container {
     max-height: 120px;
     overflow: hidden;
     margin-bottom: 5px;
   }
 }
-/* line 327, ../../sass/_bswe.scss */
+/* line 350, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post,
 body .loops-wrapper.grid3 .post,
 body .loops-wrapper.grid4 .post {
   clear: none;
 }
-/* line 332, ../../sass/_bswe.scss */
+/* line 355, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post .post-title,
 body .loops-wrapper.grid3 .post .post-title,
 body .loops-wrapper.grid4 .post .post-title {
   clear: both;
 }
-/* line 339, ../../sass/_bswe.scss */
+/* line 362, ../../sass/_bswe.scss */
 body #loops-wrapper .sidebar-ads,
 body article .sidebar-ads {
   margin-bottom: 10px;
 }
 @media screen and (min-width: 760px) {
-  /* line 339, ../../sass/_bswe.scss */
+  /* line 362, ../../sass/_bswe.scss */
   body #loops-wrapper .sidebar-ads,
   body article .sidebar-ads {
     display: none;
   }
 }
-/* line 348, ../../sass/_bswe.scss */
+/* line 371, ../../sass/_bswe.scss */
 body .mobile-ad {
   display: none;
   text-align: center;
   margin-bottom: 10px;
 }
 @media screen and (max-width: 480px) {
-  /* line 348, ../../sass/_bswe.scss */
+  /* line 371, ../../sass/_bswe.scss */
   body .mobile-ad {
     display: block;
   }
 }
-/* line 358, ../../sass/_bswe.scss */
+/* line 381, ../../sass/_bswe.scss */
 body #nav-bar {
   min-height: inherit;
 }
 @media screen and (max-width: 600px) {
-  /* line 361, ../../sass/_bswe.scss */
+  /* line 384, ../../sass/_bswe.scss */
   body #nav-bar ul {
     display: none;
   }
 }
-/* line 367, ../../sass/_bswe.scss */
+/* line 390, ../../sass/_bswe.scss */
 body #nav-bar .jrsm-0 {
   margin-bottom: 10px;
   font-size: 16px;
 }
-/* line 373, ../../sass/_bswe.scss */
+/* line 396, ../../sass/_bswe.scss */
 body .post-author {
   color: #333;
   font-style: normal;
   font-weight: bold;
 }
-/* line 381, ../../sass/_bswe.scss */
+/* line 404, ../../sass/_bswe.scss */
 body .post {
   margin-bottom: 0;
 }
 @media screen and (max-width: 480px) {
-  /* line 384, ../../sass/_bswe.scss */
+  /* line 407, ../../sass/_bswe.scss */
   body .post .post-content {
     clear: both;
   }
 }
-/* line 391, ../../sass/_bswe.scss */
+/* line 414, ../../sass/_bswe.scss */
 body #sidebar,
 body #sidebar-alt {
   text-align: center;
 }
 @media screen and (max-width: 760px) {
-  /* line 398, ../../sass/_bswe.scss */
+  /* line 421, ../../sass/_bswe.scss */
   body #sidebar .sidebar_newsletter {
     display: none;
   }
 }
-/* line 405, ../../sass/_bswe.scss */
+/* line 428, ../../sass/_bswe.scss */
 body .sidebar-ads {
   clear: both;
   text-align: center;
 }
-/* line 410, ../../sass/_bswe.scss */
+/* line 433, ../../sass/_bswe.scss */
 body .sidebar-ads img.desktop-tablet-ad-img, body .sidebar-ads img.mobile-ad-img {
   display: none;
 }
 @media screen and (min-width: 760px) {
-  /* line 415, ../../sass/_bswe.scss */
+  /* line 438, ../../sass/_bswe.scss */
   body .sidebar-ads img.desktop-tablet-ad-img {
     display: inline-block;
   }
 }
 @media screen and (max-width: 760px) {
-  /* line 421, ../../sass/_bswe.scss */
+  /* line 444, ../../sass/_bswe.scss */
   body .sidebar-ads img.mobile-ad-img {
     display: inline-block;
   }
 }
-/* line 430, ../../sass/_bswe.scss */
-body #execphp-10 {
-  background: #e2e2e2;
+/* line 452, ../../sass/_bswe.scss */
+body .social_icons {
+  margin-bottom: 10px;
 }
-/* line 433, ../../sass/_bswe.scss */
-body #execphp-10 .banner728 {
-  margin: 0;
-  max-height: 90px;
-  text-align: center;
-  padding: 10px;
+/* line 455, ../../sass/_bswe.scss */
+body .social_icons p {
+  position: relative;
 }
-/* line 441, ../../sass/_bswe.scss */
+/* line 458, ../../sass/_bswe.scss */
+body .social_icons p span {
+  font-size: 17px;
+  position: absolute;
+  left: 99px;
+  top: 6px;
+}
+/* line 468, ../../sass/_bswe.scss */
 body .writer_promo {
   background-color: #f2ee8b;
   padding: 10px;
   border: #000 1px solid;
 }
-/* line 446, ../../sass/_bswe.scss */
+/* line 473, ../../sass/_bswe.scss */
 body .writer_promo h2 {
   margin-top: 0;
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 451, ../../sass/_bswe.scss */
+/* line 478, ../../sass/_bswe.scss */
 body .writer_promo h4 {
   margin: 0;
 }
-/* line 457, ../../sass/_bswe.scss */
+/* line 484, ../../sass/_bswe.scss */
 body .yarpp-related legend {
   font-size: 18px;
   font-weight: bold;
